--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "PWA",
-    "name": "PWA sample app",
+    "short_name": "Robocon2023",
+    "name": "Robocon2023_FieldIndicator",
     "display": "standalone",
     "start_url": "index.html",
     "icons": [
