--- a/manifest.json
+++ b/manifest.json
@@ -5,10 +5,9 @@
     "start_url": "index.html",
     "icons": [
         {
-            "src": "images/icon.jpg",
+            "src": "",
             "sizes": "192x192",
             "type": "image/jpg"
         }
     ]
 }
-
