--- a/manifest.json
+++ b/manifest.json
@@ -2,17 +2,17 @@
     "short_name": "Robocon2023",
     "name": "Robocon2023_FieldIndicator",
     "display": "standalone",
-    "start_url": "index.html",
+    "start_url": "./index.html",
     "icons": [
         {
             "src": "https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/PWA/image/allFruits_192.png?raw=true",
             "sizes": "192x192",
-            "type": "image/jpg"
+            "type": "image/png"
         },
         {
             "src": "https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/PWA/image/allFruits_512.png?raw=true",
             "sizes": "512x512",
-            "type": "image/jpg"
+            "type": "image/png"
         }
     ]
 }
