--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,12 @@
     "start_url": "./index.html",
     "icons": [
         {
-            "src": "https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/PWA/image/allFruits_192.png?raw=true",
+            "src": "./image/allFruits_192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/PWA/image/allFruits_512.png?raw=true",
+            "src": "./image/allFruits_512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
