--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,21 @@
 {
-    "short_name": "Robocon2023",
-    "name": "Robocon2023_FieldIndicator",
-    "display": "standalone",
-    "start_url": "index.html",
-    "icons": [
-        {
-            "src": "",
-            "sizes": "192x192",
-            "type": "image/jpg"
-        }
-    ]
+  "name": "Robocon2023 Field Indicator",
+  "short_name": "FieldIndicator",
+  "description": "A field indicator application for Robocon 2023.",
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "images/Robocon2023_logo.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "images/Robocon2023_logo.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
